# MyWebserver

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  mywebserver
Root/: README.md  end.html  judge.html  login.html  loginError.html  register.html  registerError.html  video.html  welcome.html
include/: config.h  debug.h  http_connect.h  log.h  myTools.h  my_threadPool.h  mysql_database.h  someTools.h  sqlConnectPool.h  timer.h  webserver.h
src/: CMakeLists.txt  config.cc  http_connect.cc  log.cc  main.cc  myTools.cc  my_threadPool.cc  mysql_database.cc  sqlConnectPool.cc  timer.cc  webserver.cc
